--- a/Frontend/src/components/Login/Login.css
+++ b/Frontend/src/components/Login/Login.css
@@ -1,11 +1,34 @@
+.Signin-Signup{
+background-color: aqua;
+width: 50em;
+height: 30em;
+position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 input{
 width: 20em ;
 height: 3em;
-display: block;
+text-align: center;
+display: flex;
+
 
 }
 
 button{
 display: block;
+width: 10em;
+height: 3em;
+background-color: rgb(0, 255, 47);
+
+}
+button:hover {
+    background-color: #16a532
+}
+
+.container{
+text-align: center;
 
 }
