--- a/Frontend/src/container/Header/NavBar.css
+++ b/Frontend/src/container/Header/NavBar.css
@@ -1,20 +1,45 @@
 nav {
-    margin: 0;
-    width: 100%;
-    height: 80px;
-    background-color: rgb(190, 168, 168);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    text-decoration: none;
-  }
+  margin: 0;
+  width: 100%;
+  height: 80px;
+  background-color: rgb(255, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+}
 
-  a {
-    color: white;
-    text-decoration: none;
-    margin: 10px;
-    font-size: 25px;
-    
-  }
-  
+a {
+  color: white;
+  text-decoration: none;
+  margin: 10px;
+  font-size: 25px;
+  width: 80px;
+  height: 40px;
+  display: inline-block;
+  transition: background-color 0.2s ease;
+}
+
+a:hover {
+  background-color: rgb(200, 0, 0);
+  border: 2px solid white;
+}
+
+a.clicked {
+  background-color: green;
+}
+
+.sign-out-btn{
+background-color: rgb(13, 109, 19);
+width: 90px;
+position: absolute;
+  top: 20px;
+  right: 16px;
+  color:white;
+}
+
+.sign-out-btn:hover{
+
+  background-color: rgb(31, 2, 2);
+}
